Added functionality to cards
Added functionality to cards to display on screen

--- a/blackJack/assets/CSS/main.css
+++ b/blackJack/assets/CSS/main.css
@@ -57,13 +57,13 @@ body {
 
 .top, .bottom{
     border: 2px solid red;
-    height: 50vh;
+    height: 42vh;
 }
 
 img {
 	height: 30vh;
 }
 
-#dealerFirstCard{
-	visibility: hidden;
+footer {
+	height: 10vh;
 }
