--- a/blackJack/assets/CSS/main.css
+++ b/blackJack/assets/CSS/main.css
@@ -23,7 +23,7 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
+	font-size: 67.5%;
 	font: inherit;
 	vertical-align: baseline;
 }
@@ -34,6 +34,9 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	background: radial-gradient(rgb(159, 103, 197),darkorchid,rgb(66, 5, 122));
+	font-size: 1.5rem;
+	height: 100vh
 }
 ol, ul {
 	list-style: none;
@@ -50,20 +53,43 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
-body {
-    background-color: gainsboro;
+section{
+	display: flex;
+	justify-content: center;
+	/* padding-bottom: 2rem; */
 }
-
+h2{
+	font-size: 2rem;
+}
 .top, .bottom{
-    border: 2px solid red;
-    height: 42vh;
+	display: flex;
+    /* border: 2px solid red; */
+    height: 32vh;
+	justify-content: center;
+	align-items: center;
 }
-
+.top{
+	display: flex;
+}
+.bottom{
+	display: flex;
+}
 img {
-	height: 30vh;
+	height: 22vh;
 }
 
 footer {
 	height: 10vh;
+	width: 50vw;
+	display: flex;
+	justify-content: center;
+	padding-top: 1rem;
+}
+button{
+	background: radial-gradient(rgb(159, 103, 197),darkorchid,rgb(66, 5, 122));
+	border-radius: .5rem;
+	border: .01rem solid rgb(53, 51, 51);
+	height: 2rem;
+	margin: 0 .25rem 0 .25rem;
+	padding: 0 .5rem 0 .5rem;
 }
