--- a/blackJack/assets/CSS/main.css
+++ b/blackJack/assets/CSS/main.css
@@ -34,7 +34,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-	background: radial-gradient(rgb(159, 103, 197),darkorchid,rgb(66, 5, 122));
+	background: radial-gradient(rgb(159, 103, 197),darkorchid,rgb(66, 5, 122),rgb(49, 0, 95));
 	font-size: 1.5rem;
 	height: 100vh
 }
@@ -64,7 +64,7 @@ h2{
 .top, .bottom{
 	display: flex;
     /* border: 2px solid red; */
-    height: 32vh;
+    height: 25vh;
 	justify-content: center;
 	align-items: center;
 }
@@ -77,12 +77,17 @@ h2{
 img {
 	height: 22vh;
 }
-div{
-	width: 100vw;	
-	height: 5vh;
+footer{
 	display: flex;
 	justify-content: center;
-	padding-top: 1rem;
+}
+div{
+	width: 55vw;	
+	height: 5vh;
+	display: flex;
+	justify-content: space-evenly;
+	
+	padding: .5rem .5rem 0 .5rem;
 }
 .footer {
 	height: 10vh;
