--- a/blackJack/assets/CSS/main.css
+++ b/blackJack/assets/CSS/main.css
@@ -74,6 +74,7 @@ img {
 footer{
 	display: flex;
 	justify-content: center;
+	height: 10vh;
 }
 div{
 	width: 55vw;	
@@ -135,6 +136,7 @@ button{
 	footer{ 
 		flex-direction: column;
 		align-items: center;
+		
 	}
 	p {
 		font-size: 1.3rem;
